--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -3009,7 +3009,7 @@ In this example all the values are reasonable values. However, if we discovered 
 \hypertarget{pivot-to-tidy-data}{%
 \subsection{Pivot to tidy data}\label{pivot-to-tidy-data}}
 
-The analytic data in it's current form does not conform to the the tidy data specification. Inspect the data with the print() command. Notice thatthere is not a column for occasion (with levels march/may/july). Instead, there are three columns each of which represents a level of occasion. The levels of occasion are spread across three columns called march, may, and july. Each of these columns contains elapsed time for participants in that month.
+The analytic data in it's current form does not conform to the tidy data specification. Inspect the data with the print() command. Notice thatthere is not a column for occasion (with levels march/may/july). Instead, there are three columns each of which represents a level of occasion. The levels of occasion are spread across three columns called march, may, and july. Each of these columns contains elapsed time for participants in that month.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -3029,7 +3029,7 @@ The analytic data in it's current form does not conform to the the tidy data spe
 ## 6 6     female    36    33    31
 \end{verbatim}
 
-The pivot\_longer() command below coverts our data to the tidy data format. In this command we specify the the columns march, may, and july are all levels of a single variable called occasion. We specify the columns involved with the cols argument. The code march:july after the cols argument selects the march column, the july column, and all the columns in-between. Each column contains elapsed times at level of the variable occasion. The names\_to argument is used to indicate that a new column called occasion should be created to hold the different months. The value\_to argument is used to indicate that a new column called elapsed\_time should created to hold all the values from the march, may, and july columns.
+The pivot\_longer() command below coverts our data to the tidy data format. In this command we specify the columns march, may, and july are all levels of a single variable called occasion. We specify the columns involved with the cols argument. The code march:july after the cols argument selects the march column, the july column, and all the columns in-between. Each column contains elapsed times at level of the variable occasion. The names\_to argument is used to indicate that a new column called occasion should be created to hold the different months. The value\_to argument is used to indicate that a new column called elapsed\_time should created to hold all the values from the march, may, and july columns.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -3354,7 +3354,7 @@ In this example all the values are reasonable values. However, if we discovered 
 \hypertarget{pivot-to-tidy-data-1}{%
 \subsection{Pivot to tidy data}\label{pivot-to-tidy-data-1}}
 
-The analytic data in its current form does not conform to the the tidy data specification. Inspect the data with the print() command. Notice that columns do not exist for temperature (with levels hot/cold) or food type (with levels pizza/steak/burger). Instead, there are six columns that are combinations of the levels of these variables (i.e., pizza\_hot, pizza\_cold, steak\_hot, steak\_cold, burger\_hot, and burger\_cold). Each of these columns contains taste ratings on a 1 to 10 point scale.
+The analytic data in its current form does not conform to the tidy data specification. Inspect the data with the print() command. Notice that columns do not exist for temperature (with levels hot/cold) or food type (with levels pizza/steak/burger). Instead, there are six columns that are combinations of the levels of these variables (i.e., pizza\_hot, pizza\_cold, steak\_hot, steak\_cold, burger\_hot, and burger\_cold). Each of these columns contains taste ratings on a 1 to 10 point scale.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -3376,7 +3376,7 @@ The analytic data in its current form does not conform to the the tidy data spec
 
 We need to restructure the data into the tidy data format so that we have a food\_type column and a temperature column to properly represent these predictors. As well, we need a column that contains all of the taste ratings that is clearly labeled taste. Doing all of these things will ensure we have one variable per column and one observation per row - consistent with the requirements of tidy data. The pivot\_longer() command below coverts our data to the tidy data format.
 
-In this command we specify the the columns march, may, and july are all levels of a single variable called occasion. We specify the columns involved with the cols argument. The code pizza\_hot:burger\_cold after the cols argument selects the pizza\_hot column, the burger\_cold column, and all the columns in between. Each column contains taste ratings at a combination of the levels for the variables food\_type and temperature. The names\_to argument is used to indicate that two new columns should be created to represent food and temperature. Notice the order food then temperature. This is consistent with our naming convention; in the column name pizza\_hot the food\_type is specified before temperature. The value\_to argument is used to indicate that a new column called taste should created to hold all the values from the pizza\_hot, pizza\_cold, steak\_hot, steak\_cold, burger\_hot, and burger\_cold columns.
+In this command we specify the columns march, may, and july are all levels of a single variable called occasion. We specify the columns involved with the cols argument. The code pizza\_hot:burger\_cold after the cols argument selects the pizza\_hot column, the burger\_cold column, and all the columns in between. Each column contains taste ratings at a combination of the levels for the variables food\_type and temperature. The names\_to argument is used to indicate that two new columns should be created to represent food and temperature. Notice the order food then temperature. This is consistent with our naming convention; in the column name pizza\_hot the food\_type is specified before temperature. The value\_to argument is used to indicate that a new column called taste should created to hold all the values from the pizza\_hot, pizza\_cold, steak\_hot, steak\_cold, burger\_hot, and burger\_cold columns.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -3713,7 +3713,7 @@ Start by examining the range of non-scale items. In this case it's only age. Exa
 ## 1           age         3 20.52 2.05 17  20   24
 \end{verbatim}
 
-With respect to the multi-item scales, it makes sense to look at sets of items rather than all of the items at once. This is because sometimes items from different scales use response ranges. For example, one measure might use a response scale with a range from 1 to 5; whereas another measure might use a response scale with a range from 1 to 7. This is undesirable from a psychometric point of view, as discussed previously, but if it happens in your data - look at the scale items separately to make it easy to see out of range values.
+With respect to the multi-item scales, it makes sense to look at sets of items rather than all of the items at once. This is because sometimes items from different scales use different response ranges. For example, one measure might use a response scale with a range from 1 to 5; whereas another measure might use a response scale with a range from 1 to 7. This is undesirable from a psychometric point of view, as discussed previously, but if it happens in your data - look at the scale items separately to make it easy to see out of range values.
 
 We begin by looking at the items in the first scale, self-esteem. Possible items responses for this scale range from 1 to 5; make sure all responses are in this range. If any values fall outside this range, you may need to check the original data source or replace them with missing values - as described previously.
 
@@ -3767,7 +3767,7 @@ The way you deal with reverse-keyed items depends on how you scored them. Imagin
 
 In this example, we scored the data using the value 1 to 5; so that is the approach illustrated here. See the extra information box for details on how to fixed reverse-keyed items when the scale begins with zero.
 
-In this data file all the reverse-keyed were identified with the suffix "\_rev15" in the column names. This suffix indicates the item was reverse keyed and that the original scale used the response points 1 to 5. We can see those items with the glimpse() command below. Notice that there are two reverse-keyed items - each on difference scales.
+In this data file all the reverse-keyed items were identified with the suffix "\_rev15" in the column names. This suffix indicates the item was reverse keyed and that the original scale used the response points 1 to 5. We can see those items with the glimpse() command below. Notice that there are two reverse-keyed items - each on difference scales.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -3784,7 +3784,7 @@ In this data file all the reverse-keyed were identified with the suffix "\_rev15
 ## $ jobsat2_rev15 <dbl> 1, 1, 1, NA, 1, 1, 2, 1, 2, 2, 3,...
 \end{verbatim}
 
-To correct a reverse-keyed items where the lowest possible rating value is a 1 (i.e, 1 on a 1 to 5 scale), we simply subtract all the scores from a value one more than the highest possible rating. For example, if a 1 to 5 response scale was used we subtract each response from 6 to obtain the recoded value.
+To correct a reverse-keyed item where the lowest possible rating is 1 (i.e, 1 on a 1 to 5 scale), we simply subtract all the scores from a value one more than the highest point possible on the scale (i.e., one more than 5). For example, if a 1 to 5 response scale was used we subtract each response from 6 to obtain the recoded value.
 
 \begin{longtable}[]{@{}ccc@{}}
 \toprule
@@ -3804,11 +3804,11 @@ The code below:
 \begin{itemize}
 \tightlist
 \item
-  selects each column that ends with "\_rev15" (i.e., both esteem and jobsat scales)
+  selects columns that end with "\_rev15" (i.e., both esteem and jobsat scales)
 \item
-  subtracts each value in that column from 6
+  subtracts the values in those columns from 6
 \item
-  renames the column by removing "\_rev15" from the name because the reverse coding is complete.
+  renames the columns by removing "\_rev15" from the name because the reverse coding is complete
 \end{itemize}
 
 \begin{Shaded}
@@ -3821,7 +3821,7 @@ The code below:
 \end{Highlighting}
 \end{Shaded}
 
-You can use the glimpse() command to see the result of your work. If you compare this to values from the previous glimpse() command you can see they have changed. Also notice the column names no longer indicate the items are reverse keyed.
+You can use the glimpse() command to see the result of your work. If you compare these new values to those obtained from the previous glimpse() command you can see they have changed. Also notice the column names no longer indicate the items are reverse keyed.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -3867,7 +3867,7 @@ Original value & Math & Recoded value\tabularnewline
 \bottomrule
 \end{longtable}
 
-Thus the mutate command would instead be:
+Thus, the mutate command would instead be:
 
 mutate(4 - across(.cols = ends\_with("\_rev15")) )
 
@@ -3877,7 +3877,7 @@ mutate(4 - across(.cols = ends\_with("\_rev15")) )
 \hypertarget{creating-scores}{%
 \subsubsection{Creating scores}\label{creating-scores}}
 
-The process we use for creating scale scores deletes item level data from analytic\_data\_survey. This is a desirable aspect of the process because it removes information we are no longer interested in from our analytic data. That said, before we create scale score, we create a backup on the item level data called analytic\_data\_survey\_items. We will need to use this backup later to compute the reliability of the scales we are creating.
+The process we use for creating scale scores deletes item-level data from analytic\_data\_survey. This is a desirable aspect of the process because it removes information that we are no longer interested in from our analytic data. That said, before we create scale score, we create a backup on the item-level data called analytic\_data\_survey\_items. We will need to use this backup later to compute the reliability of the scales we are creating.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -3927,7 +3927,7 @@ Likewise, we want to make a job\_sat scale and plan to select items using starts
 
 We calculate the scale scores using the rowwise() command. The mean() command provides the mean of columns by default - not people. We use the rowwise() command in the code below to make the mean() command work across columns (within participants) rather than within columns. The mutate command calculates the scale score for each person. The c\_across() command combined with the starts\_with() command ensures the items we want averaged together are the items that are averaged together. Notice there is a separate mutate line for each scale. The ungroup() command turns off the rowwise() command. We end the code block by removing the item-level data from the data set.
 
-\textbf{Important:} Take note of how we names the scale variables (e.g., self\_esteem, job\_sat) use a slightly different convention than our items. That is, these scale labels were picked so that they would \emph{not} be selected by a starts\_with(``esteem'') or starts\_with(``jobsat''). Why? Because we later use those commands to remove the item-level data. We would want the command designed to remove the item-level data to also remove the scale we just calculated! This example illustrates how carefully you need to think about your naming conventions.
+\textbf{Important:} Take note of how we name the scale variables (e.g., self\_esteem, job\_sat). We use a slightly different convention than our items. That is, these scale labels were picked so that they would \emph{not} be selected by a starts\_with(``esteem'') or starts\_with(``jobsat''). Why - because we later use those commands to remove the item-level data. We would want the command designed to remove the item-level data to also remove the scale we just calculated! This example illustrates how carefully you need to think about your naming conventions.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -3943,7 +3943,7 @@ We calculate the scale scores using the rowwise() command. The mean() command pr
 \end{Highlighting}
 \end{Shaded}
 
-We can see our data now has the self\_esteem column, a job\_sat column, and that all of the item level data has been removed.
+We can see our data now has the self\_esteem column, a job\_sat column, and that all of the item-level data has been removed.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -4015,7 +4015,7 @@ We load the initial data into a raw\_data\_occasions but immediately make a copy
 \end{Highlighting}
 \end{Shaded}
 
-Remove empty row and columns from your data using the remove\_empty\_cols() and remove\_empty\_rows(), respectively. As well, clean the names of your columns to ensure they conform to tidyverse naming conventions.
+Remove empty rows and columns from your data using the remove\_empty(``rows'') and remove\_empty(``cols''), respectively. As well, clean the names of your columns to ensure they conform to tidyverse naming conventions.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -4116,7 +4116,7 @@ We have two variables, sex and eye\_color, that are categorical variable of type
 \end{Highlighting}
 \end{Shaded}
 
-The participant identification number in the id column is a numeric column, so we have handle that column on it's own.
+The participant identification number in the id column is numeric, so we have to handle that column on its own.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -4164,12 +4164,12 @@ You can ensure all of these columns are now factors using the glimpse() command.
 
 Inspect the output of the glimpse() command and make sure you have converted all categorical variables to factors - especially those you will use as predictors.
 
-\textbf{Note:} f you have factors like sex that have numeric data in the column (e.g, 1 and 2) instead of male/female you need to handle the situation differently. The preceding section, Experiment: Within N-way, illustrates how to handle this scenario.
+\textbf{Note:} If you have factors like sex that have numeric data in the column (e.g, 1 and 2) instead of male/female you need to handle the situation differently. The preceding section, Experiment: Within N-way, illustrates how to handle this scenario.
 
 \hypertarget{factor-screening-4}{%
 \subsection{Factor screening}\label{factor-screening-4}}
 
-Inspect the levels of each factor carefully. Make sure that there not any levels present that are incorrect. For example, you wouldn't want to have the following levels for sex: male, mmale, female. Obviously, mmale is an incorrectly typed version of male. Scan all the factor in your data for erroneous factor levels. The code below displays the factor levels:
+Inspect the levels of each factor carefully. Make sure the factor levels of each variable are correct. Examine spelling and look for additional unwanted levels. For example, you wouldn't want to have the following levels for sex: male, mmale, female. Obviously, mmale is an incorrectly typed version of male. Scan all the factors in your data for erroneous factor levels. The code below displays the factor levels:
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -4202,7 +4202,7 @@ Also inspect the output of the above summary() command paying attention to the o
 \end{Highlighting}
 \end{Shaded}
 
-For eye color, we want to future graph to be have the most common eye colors on the left so we reorder the factor levels:
+For eye color, we want a future graph to have the most common eye colors on the left so we reorder the factor levels:
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -4235,11 +4235,11 @@ You can see the new order of the factor levels with summary():
 \hypertarget{numeric-screening-4}{%
 \subsection{Numeric screening}\label{numeric-screening-4}}
 
-For numeric variables, it's important find and remove impossible values. For example, in the context of this example you want to ensure none of the elapsed\_times are impossible (e.g., outside the 1 to 5 point rating scale for Likert items) or clearly data entry errors.
+For numeric variables, it's important to find and remove impossible values. For example, in the context of this example you want to ensure none of the Likert responses are impossible (e.g., outside the 1- to 5-point rating scale) or clearly data entry errors.
 
-Because we have several numeric columns that we are screening, we use the skim() command from the skimr package. The skim() command quickly provides basic descriptive statistics. In the output for this command there are also several columns that begin with p: p0, p25, p50, p75, and p100 (p25 and p75 omitted in output due to space). These columns correspond to the 0th, 25th, 50th, 75th, and 100th percentiles, respectively. The minimum and maximum values for the data column are indicated under the p0 and p100 labels. The median is the 50th percentile (p50). The interquartile range is the range between p25 and p75.
+Because we have several numeric columns that we are screening, we use the skim() command from the skimr package. The skim() command quickly provides basic descriptive statistics. In the output for this command there are also several columns that begin with p: p0, p25, p50, p75, and p100 (p25 and p75 are omitted in output due to space). These columns correspond to the 0th, 25th, 50th, 75th, and 100th percentiles, respectively. The minimum and maximum values for the data column are indicated under the p0 and p100 labels. The median is the 50th percentile (p50). The interquartile range is the range between p25 and p75.
 
-Start by examining the range of non-scale items. In this case it's only age. Examine the output to see if any of the age values are unreasonable. As noted, in the output p0 and p100 indicate the 0th percentile and the 100th percentile; that is the minimum and maximum values for the variable. Check to make sure none of the age values are unreasonably low or high. If they are, you may need to check the original data source or replace them with missing values.
+Start by examining the range of non-scale items. In this case it's only age. Examine the output to see if any of the age values are unreasonable. As noted, p0 and p100 in the output indicate the 0th percentile and the 100th percentile; that is the minimum and maximum values for the variable. Check to make sure none of the age values are unreasonably low or high. If they are, you may need to check the original data source or replace them with missing values.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -4255,9 +4255,9 @@ Start by examining the range of non-scale items. In this case it's only age. Exa
 ## 1           age         3 20.52 2.05 17  20   24
 \end{verbatim}
 
-With respect to the multi-item scales, it makes sense to look at sets of items rather than all of the items at once. This is because sometime items from different scales use response ranges. For example, for one measure might use a response scale with a range from 1 to 5 whereas for another measure might use a response scale with a range from 1 to 7. This is undesirable from a psychometric point of view, as discussed previously, but it if happens it your data - look at the scale items separately to make it easy to see out of range values.
+With respect to the multi-item scales, it makes sense to look at sets of items rather than all of the items at once. This is because sometimes items from different scales use different response ranges. For example, one measure might use a response scale with a range from 1 to 5; whereas another measure might use a response scale with a range from 1 to 7. This is undesirable from a psychometric point of view, as discussed previously, but if it happens in your data - look at the scale items separately to make it easy to see out of range values.
 
-We begin by looking at the items in the first scale, self-esteem. Possible items responses for this scale range from 1 to 5, make sure all responses are in this range. If any values fall outside this range, you may need to check the original data source or replace them with missing values - as described previously.
+We begin by looking at the items in the first scale, self-esteem. Possible item responses for this scale range from 1 to 5. Make sure all responses are in this range. If any values fall outside this range, you may need to check the original data source or replace them with missing values - as described previously.
 
 Because we want to select the self-esteem items from both time 1 and time 2 we cannot use the starts\_with() command. Instead we use the contains() command in the code below.
 
@@ -4283,7 +4283,7 @@ Because we want to select the self-esteem items from both time 1 and time 2 we c
 ## 10 t2_esteem5_rev15         4 3.19 0.45  2   3    4
 \end{verbatim}
 
-Follow the same process for the job satisfaction items. Possible items responses for the job satisfaction scale range from 1 to 5, make sure all responses are in this range. If any values fall outside this range, you may need to check the original data source or replace them with missing values - as described previously.
+Follow the same process for the job satisfaction items. Possible item responses for the job satisfaction scale range from 1 to 5, make sure all responses are in this range. If any values fall outside this range, you may need to check the original data source or replace them with missing values - as described previously.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -4310,14 +4310,14 @@ Follow the same process for the job satisfaction items. Possible items responses
 \hypertarget{scale-scores-1}{%
 \subsection{Scale scores}\label{scale-scores-1}}
 
-Scale scores involve averaging, for each person, their score over several items to create an overall scale score. The first step in the creation of scales if correcting the values of any reverse-keyed items.
+For each person, scale scores involve averaging scores from several items to create an overall score. The first step in the creation of scales is correcting the values of any reverse-keyed items.
 
 \hypertarget{reverse-key-items-1}{%
 \subsubsection{Reverse-key items}\label{reverse-key-items-1}}
 
 The way you deal with reverse-keyed items depends on how you scored them. Imagine you had a 5-point scale. You could have scored the scale with the values 1, 2, 3, 4, and 5. Alternatively, you could have scored the scale with the values 0, 1, 2, 3, and 4. The mathematical approach you use to correcting reverse-keyed items depends upon whether the scale starts with 1 or 0.
 
-In this example, we scored the data using the 1 to 5 system. So use the correct approach for scales that being with 1. The preceding section, Surveys: Single occasion, describes how the math differs when the response scale starts with 0. I encourage you to read that section before going further if you have not done so already.
+In this example, we scored the Likert items using the values 1 to 5. Therefore, we use the reverse keying approach for scales that being with 1. The preceding section, ``Surveys: Single occasion'', describes how the math differs when the response scale starts with 0. We encourage you to read that section before going further if you have not done so already.
 
 In this data file all the reverse-keyed items were identified with the suffix "\_rev15" in the column names. This suffix indicates the item was reverse keyed and that the original scale used the response points 1 to 5. We can see those items with the glimpse() command below. Notice that there are two reverse-keyed items - each on difference scales.
 
@@ -4334,18 +4334,18 @@ In this data file all the reverse-keyed items were identified with the suffix "\
 ## Columns: 0
 \end{verbatim}
 
-To correct reverse-keyed items where the lowest possible rating value is a 1 (i.e, 1 on a 1 to 5 scale), we simply subtract all the scores from a value one more than the highest possible rating (i.e., 6).
+To correct reverse-keyed items where the lowest possible rating is 1 (i.e, 1 on a 1 to 5 scale), we simply subtract all the scores from a value one more than the highest possible rating (i.e., 6).
 
 The code below:
 
 \begin{itemize}
 \tightlist
 \item
-  selects each column that ends with "\_rev15" (i.e., both esteem and jobsat scales)
+  selects columns that end with "\_rev15" (i.e., both esteem and jobsat scales)
 \item
-  subtracts each value in that column from 6
+  subtracts the values in those columns from 6
 \item
-  renames the column by removing "\_rev15" from the name because the reverse coding is complete.
+  renames the columns by removing "\_rev15" from the name because the reverse coding is complete
 \end{itemize}
 
 \begin{Shaded}
@@ -4358,12 +4358,12 @@ The code below:
 \end{Highlighting}
 \end{Shaded}
 
-You can use the glimpse() command to see the result of your work. If you compare this to values from the previous glimpse() command you can see they have changed. Also notice the column names no longer indicate the items are reverse keyed.
+You can use the glimpse() command to see the result of your work. If you compare these new values to those obtained from the previous glimpse() command you can see they have changed. Also notice the column names no longer indicate the items are reverse keyed.
 
 \hypertarget{creating-scores-1}{%
 \subsubsection{Creating scores}\label{creating-scores-1}}
 
-The process we use for creating scale scores deletes item level data from analytic\_data\_survey. This is a desirable aspect of the process because it removes information we are no longer interested in from our analytic data. That said, before we create scale score, we create a backup on the item level data called analytic\_data\_survey\_items. We will need to use this backup later to compute the reliability of the scales we are creating.
+The process we use for creating scale scores deletes item-level data from analytic\_data\_survey. This is a desirable aspect of the process because it removes information we no longer need. That said, before we create scale scores, we create a backup on the item-level data in analytic\_data\_survey called analytic\_data\_survey\_items. We will need to use this backup later to compute the reliability of the scales we are creating.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -4371,7 +4371,7 @@ The process we use for creating scale scores deletes item level data from analyt
 \end{Highlighting}
 \end{Shaded}
 
-We want to make a self\_esteem scale and plan to select items using starts\_with(``t1\_esteem''). But prior to doing this we make sure the start\_with() command only gives us the items we want - and not additional unwanted items. The output below confirms there are not problems associated with using starts\_with(``t1\_esteem'').
+We want to make a self\_esteem scale and plan to select items using starts\_with(``t1\_esteem''). Prior to doing this we make sure the start\_with() command only gives us the items we want - and not additional unwanted items. The output below confirms there are not problems associated with using starts\_with(``t1\_esteem'').
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -4393,9 +4393,9 @@ We want to make a self\_esteem scale and plan to select items using starts\_with
 
 Repeat this set of commands using t2\_esteem, t1\_jobsat, and t2\_jobsat. Make sure that those start\_with() terms select only the relevant items and not others.
 
-We calculate the scale scores using the rowwise() command. The mean() command provides the mean of columns by default - not people. We use the rowwise() command in the code below to make the mean() command work across columns (within participants) rather than within columns. The mutate command calculates the scale score for each person. The c\_across() command combined with the starts\_with() command ensures the items we want averaged together are the items that are averaged together. Notice there is a separate mutate line for each scale. The ungroup() command turns off the rowwise() command. We end the code block by removing the item-level data from the data set.
+We calculate the scale scores using the rowwise() command. The mean() command provides the mean of columns by default - not people. We use the rowwise() command in the code below to make the mean() command work across columns (within participants) rather than within columns. The mutate command calculates the scale score for each person. The c\_across() command combined with the starts\_with() command ensures the items we want averaged together are the items that are averaged together. Notice that there is a separate mutate line for each scale. The ungroup() command turns off the rowwise() command. We end the code block by removing the item-level data from the data set.
 
-\textbf{Important:} Take note of how we names the scale variables (e.g., esteem\_t1, jobsat\_t1) use a slightly different convention than our items. That is, these scale labels were picked so that they would \emph{not} be selected by a starts\_with(``t1\_esteem'') or starts\_with(``t1\_jobsat''). Why? Because we later use those commands to remove the item-level data. We would want the command designed to remove the item-level data to also remove the scale we just calculated! This example illustrates how carefully you need to think about your naming conventions.
+\textbf{Important:} Take note of how the names of the scale variables (e.g., esteem\_t1, jobsat\_t1) use a slightly different convention than our items. That is, these scale labels were picked so that they would \emph{not} be selected by a starts\_with(``t1\_esteem'') or starts\_with(``t1\_jobsat''). Why - because we later use those commands to remove the item-level data. We would want the command designed to remove the item-level data to also remove the scale we just calculated! This example illustrates how carefully you need to think about your naming conventions.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -4417,7 +4417,7 @@ We calculate the scale scores using the rowwise() command. The mean() command pr
 \end{Highlighting}
 \end{Shaded}
 
-We can see our data now has the columns t1\_esteem, t2\_esteem, t1\_jobsat, and t2\_jobsat. As well, we can see that all of the item level data has been removed from the data set.
+We can see our data now has the columns t1\_esteem, t2\_esteem, t1\_jobsat, and t2\_jobsat. As well, we can see that all of the item-level data has been removed from the data set.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -4441,7 +4441,7 @@ We can see our data now has the columns t1\_esteem, t2\_esteem, t1\_jobsat, and 
 \hypertarget{pivot-to-tidy-data-2}{%
 \subsection{Pivot to tidy data}\label{pivot-to-tidy-data-2}}
 
-The analytic data in its current for does not conform to the the tidy data specification. Inspect the data with the print() command.
+The analytic data in its current form does not conform to the tidy data specification. Inspect the data with the print() command.
 Notice that a single column is not used to represent esteem, jobsat, or time. Rather, there are four columns that are a mix of these variables. The consequence of this is that there are two esteem ratings/observations on each row and two jobsat ratings/observations on each row. Tidy data is structured so that each variable is represented in a single column and each observation has its own row.
 
 \begin{Shaded}
@@ -4468,7 +4468,7 @@ Notice that a single column is not used to represent esteem, jobsat, or time. Ra
 ## #   jobsat_t2 <dbl>
 \end{verbatim}
 
-The pivot\_longer() command below coverts our data to the tidy data format. In this command we specify the the columns with data by using esteem\_t1:jobsat\_t2, this selects these two columns and all of the columns between them. Each of these columns represents a dependent variable at a particular time in the format ``variable\_time'' (e.g., esteem\_t1). The code names\_to = c(``.value'', ``time'') explains this format to R. It indicates first part of the column name (e.g., esteem) contains the name of the variable (expressed in the code as ``.value''). It also indicates that the second part of the column name represents time. The line names\_sep = "\_" tells the R that the underscore character is used to separate the first part of the name from the second part of the name. When this code is executed it creates a tidy version of data set stored in analytic\_survey\_tidy.
+The pivot\_longer() command below coverts our data to the tidy data format. In this command we specify the columns with data by using esteem\_t1:jobsat\_t2; this selects these two columns and all of the columns between them. Each of these columns represents a dependent variable at a particular time in the format ``variable\_time'' (e.g., esteem\_t1). The code names\_to = c(``.value'', ``time'') explains this format to R. It indicates that the first part of the column name (e.g., esteem) contains the name of the variable (expressed in the code as ``.value''). It also indicates that the second part of the column name represents time. The line names\_sep = "\_" tells the R that the underscore character is used to separate the first part of the name from the second part of the name. When this code is executed it creates a tidy version of data set stored in analytic\_survey\_tidy.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -4514,7 +4514,7 @@ Regardless of the design of the study, most researchers want to see descriptive 
 \hypertarget{skim}{%
 \subsection{skim()}\label{skim}}
 
-One approach is the skim() command from the skimr package. The skim() command quickly provides the basic descriptive statistics. In the output for this command there are also several columns that begin with p: p0, p25, p50, p75, and p100 (p25 and p75 omitted in output due to space). These columns correspond to the 0th, 25th, 50th, 75th, and 100th percentiles, respectively. The minimum and maximum values for the data column are indicated under the p0 and p100 labels. The median is the 50th percentile (p50). The interquartile range is the range between p25 and p75. Notice that we run this command on the ``wide'' version of the data (analytic\_data\_occasions) rather than tidy version of the data (analytic\_occasion\_tidy).
+One approach is the skim() command from the skimr package. The skim() command quickly provides the basic descriptive statistics. In the output for this command there are also several columns that begin with p: p0, p25, p50, p75, and p100 (p25 and p75 are omitted in output due to space). These columns correspond to the 0th, 25th, 50th, 75th, and 100th percentiles, respectively. The minimum and maximum values for the data column are indicated under the p0 and p100 labels. The median is the 50th percentile (p50). The interquartile range is the range between p25 and p75. Notice that we run this command on the ``wide'' version of the data (analytic\_data\_occasions) rather than tidy version of the data (analytic\_occasion\_tidy).
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -4553,7 +4553,7 @@ Another approach is the apa.cor.table() command from the apaTables package. This
 \hypertarget{tidyverse}{%
 \subsection{tidyverse}\label{tidyverse}}
 
-A final approach uses tidyverse commands. This approach is oddly long - and we won't describe how it works in detail. But, based on the information in the previous chapter you should be able to work out how this code works. Even though this code is long - it provide the ultimate in flexibility. If a new statistics is development that you want to use, you can simply include the command for it in the desired\_descriptives list and it will be included in your table. Notice that we run this command on the ``wide'' version of the data (analytic\_data\_occasions) rather than tidy version of the data (analytic\_occasion\_tidy).
+A final approach uses tidyverse commands. This approach is oddly long - and we won't describe how it works in detail. But, based on the information in the previous chapter you should be able to work out how this code works. Even though this code is long - it provide the ultimate in flexibility. If a new statistic is developed that you want to use, you can simply include the command for it in the desired\_descriptives list and it will be included in your table. Notice that we run this command on the ``wide'' version of the data (analytic\_data\_occasions) rather than tidy version of the data (analytic\_occasion\_tidy).
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -4609,7 +4609,7 @@ A final approach uses tidyverse commands. This approach is oddly long - and we w
 \hypertarget{cronbachs-alpha}{%
 \subsection{Cronbach's alpha}\label{cronbachs-alpha}}
 
-If you want Cronbach's alpha to estimate the reliability of the scale, you can use the alpha command from the psych package with the code below. Note we have to use the item level data we created a copy of called analytic\_data\_survey\_items. The glimpse() command illustrates this data set has all the original items (after reverse-key coding has been fixed).
+If you want Cronbach's alpha to estimate the reliability of the scale, you can use the alpha command from the psych package with the code below. Note we have to use the item-level data we previously created a copy of called analytic\_data\_survey\_items. The glimpse() command illustrates this data set has all the original items (after reverse-key coding has been fixed).
 
 \begin{Shaded}
 \begin{Highlighting}[]
